<resources>
    <string name="app_name">Lockey Mobile</string>
    <string name="no_connection">Нет интернет-соединения.</string>
    <string name="no_assets">Нет объектов</string>
    <string name="no_credentials">Неверный логин или пароль.</string>
    <string name="login">Логин</string>
    <string name="hint_login">Имя пользователя</string>


    <string name="tab_assets">Объекты</string>
    <string name="tab_map">Карта</string>
    <string name="tab_notice">Уведомления</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_password">Пароль:</string>
    <string name="auth_login">Логин:</string>
    <string name="auth_user_hint">имя пользователя</string>
    <string name="auth_password_hint">пароль</string>
    <string name="auth_enter_button">Войти</string>
    <string name="menu_logout">Выйти</string>
    <string name="menu_settings">Настройки</string>
    <string name="asset_activity_title">Инфо о комплекте</string>
    <string name="notification_activity_title">Уведомление</string>
    <string name="feedback_activity_title">Обратная связь</string>
    <string name="menu_item_selection">Выберите элемент</string>
    <string name="notifications_deleted">Уведомления удалены</string>
    <string name="editor_delete_notification_failed">Операция выполнена с ошибками, количество удаленных элементов - </string>
    <string name="editor_delete_notification_successful">Операция выполнена успешно, количество удаленных элементов - </string>
    <string name="delete_all_notifications">Удалить все уведомления?</string>
    <string name="delete">Удалить</string>
    <string name="confirm_logout">Выйти</string>
    <string name="logout">Выйти из учетной записи?</string>
    <string name="cancel">Отмена</string>
    <string name="delete_notifications">Удалить выбранные уведомления?</string>
    <string name="settings_title">Настройки</string>

    <!--settings-->
    <string name="settings_allow_notifications_key" translatable="false">allow_notification</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="settings_allow_notifications_title">Разрешить отправку уведомлений</string>
    <string name="settings_order_by_title">Сортировка объектов по</string>
    <string name="settings_order_by_key">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_kit_id_value</string>
    <string name="settings_use_map_title">Использовать карты</string>
    <string name="settings_default_map" translatable="false">@string/settings_google_map_value</string>
    <string name="settings_use_map_key">use_map</string>
    <string name="settings_notifications_order_by_title">Сортировка уведомлений по</string>
    <string name="settings_notifications_order_by_key">notifications_order_by</string>
    <string name="settings_notifications_order_by_default" translatable="false">@string/settings_notifications_order_by_time_value</string>



    <!-- Label for order-by kit id option [CHAR LIMIT=20] -->
    <string name="settings_order_by_kit_id_label">номеру комплекта</string>
    <string name="settings_order_by_kit_id_value" translatable="false">kit_id</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_signal_time_label">времени последнего сигнала</string>
    <string name="settings_order_by_signal_time_value" translatable="false">signal_time</string>

    <!-- Label for Google Maps [CHAR LIMIT=20] -->
    <string name="settings_google_map_label">Google Maps</string>
    <string name="settings_google_map_value" translatable="false">google_maps</string>

    <!-- Label for OpenStreetMap [CHAR LIMIT=20] -->
    <string name="settings_osm_label">OpenStreetMap</string>
    <string name="settings_osm_value" translatable="false">osm</string>

    <!-- Label for notification order by time [CHAR LIMIT=20] -->
    <string name="settings_notifications_order_by_time_label">времени отправки</string>
    <string name="settings_notifications_order_by_time_value" translatable="false">time</string>

    <!-- Label for notification order by read/unread [CHAR LIMIT=20] -->
    <string name="settings_notifications_order_by_read_label">критерию прочитано/не прочитано</string>
    <string name="settings_notifications_order_by_read_value" translatable="false">read</string>


    <string name="subscription_name">Название:</string>
    <string name="zone_name">Зоны:</string>
    <string name="subscription_status">Статус:</string>
    <string name="kits_numbers">Объекты:</string>
    <string name="subscriptions_activity_title">События</string>
    <string name="menu_subscriptions">События</string>
    <string name="no_subscriptions">Нет подписок с Push.\nСоздайте подписки на портале my.lockey.ru с доставкой Push.</string>
    <string name="menu_subscribe">Подписаться</string>
    <string name="menu_unsubscribe">Отказаться</string>
    <string name="notification_tab_empty_view_text">Нет сохраненных уведомлений</string>
    <string name="menu_feedback">Обратная связь</string>
    <string name="menu_about_program">О программе</string>

    <string name="lock_engine">БЛОКИРОВАТЬ ДВИГАТЕЛЬ</string>
    <string name="unlock_engine">РАЗБЛОКИРОВАТЬ ДВИГАТЕЛЬ</string>
    <string name="choose_command">--ВЫБЕРИТЕ КОМАНДУ--</string>
    <string name="user_agreement_text">ПРЕДУПРЕЖДЕНИЕ. Абонентские терминалы LocKey™ производства ООО «НПГ Традиция» могут быть использованы для удаленного управления техническими системами и механизмами, в том числе для включения/выключения двигателей, силовых установок и пр. в условиях невозможности осуществления визуального наблюдения за объектом управления.\n\nВышеуказанные действия потенциально могут привести к возникновению технических неисправностей, аварийных ситуаций, а также нанесению материального ущерба и вреда здоровью людей. ООО «НПГ Традиция» не несет никакой ответственности за ущерб, который может быть умышленно или по неосторожности нанесен клиентам ООО «НПГ Традиция» и третьим лицам при использовании функций удаленного управления.\n\nАктивация исходящих (релейных) выходов терминалов производится только по письменному заявлению владельца терминала(-ов) Lockey™ на имя директора ООО «НПГ Традиция»  заверенному полномочным представителем ООО «НПГ Традиция».</string>
    <string name="accept">Принять</string>
    <string name="warning_text">Внимание! Включая самостоятельно функцию \"Блокировки/разблокировки\", Вы берете на себя ответственность за возможные последствия, связанные с принудительным глушением двигателя во время движения.</string>
    <string name="send">отправить</string>


    <!--app locker strings-->

</resources>
