<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AssetActivity">

    <item
        android:id="@+id/asset_menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/asset_menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/asset_menu_subscriptions"
        android:title="@string/menu_subscriptions"
        app:showAsAction="never" />

    <item
        android:id="@+id/asset_menu_feedback"
        android:title="@string/menu_feedback"
        app:showAsAction="never" />

</menu>
    <!--android:visible="false"-->