<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NotificationActivity">

    <item
        android:id="@+id/subscription_menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/subscription_menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/subscription_menu_subscribe"
        android:title="@string/menu_subscribe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/subscription_menu_unsubscribe"
        android:title="@string/menu_unsubscribe"
        app:showAsAction="ifRoom" />

</menu>