<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/main_menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_item_selection"
        android:title="@string/menu_item_selection"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_back"
        android:title="back"
        app:showAsAction="always" />

</menu>
    <!--android:visible="false"-->
