<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_subscription_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/subscription_name"
            android:textAllCaps="true"
            android:textColor="@color/assetTableHeaderColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/subscription_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/assetTableContentColor"
            android:textSize="16sp"
            tools:text="Test" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/zone_name"
            android:textAllCaps="true"
            android:textColor="@color/assetTableHeaderColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/zone_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/assetTableContentColor"
            android:textSize="16sp"
            tools:text="Московская область" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/subscription_status"
            android:textAllCaps="true"
            android:textColor="@color/assetTableHeaderColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/subscription_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/assetTableContentColor"
            android:textSize="16sp"
            tools:text="Подписан" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/kits_numbers"
            android:textAllCaps="true"
            android:textColor="@color/assetTableHeaderColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/kits_numbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:textColor="@color/assetTableContentColor"
            android:textSize="16sp"
            tools:text="2171, 2165, 2412, 5653, 2563" />

    </LinearLayout>

</LinearLayout>